window scrollbar fix maybe

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -76,6 +76,7 @@
 }
 
 .main-container {
+  overflow-x: hidden;
 }
 
 .menu-items {
